feat: desktop and tablet adaptation

--- a/index.html
+++ b/index.html
@@ -31,16 +31,116 @@
             
     </header>
     <main class="main">
+        <section class="cardTask shortDeadline">
+            <div class="cardTask__img">
+                <img src="./imgs/cardIcon.png" alt="Card Task Icon">
+            </div>
+            <div class="cardTask__info">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <button class="cardTask__info--button">Concluir</button>
+                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+            </div>
+        </section>
         <section class="cardTask">
             <div class="cardTask__img">
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="far fa-clock"></i>
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
                 <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
                 <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
                 <button class="cardTask__info--button">Concluir</button>
                 <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+            </div>
+        </section>
+        <section class="cardTask">
+            <div class="cardTask__img">
+                <img src="./imgs/cardIcon.png" alt="Card Task Icon">
+            </div>
+            <div class="cardTask__info">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <button class="cardTask__info--button">Concluir</button>
+                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+            </div>
+        </section>
+        <section class="cardTask">
+            <div class="cardTask__img">
+                <img src="./imgs/cardIcon.png" alt="Card Task Icon">
+            </div>
+            <div class="cardTask__info">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <button class="cardTask__info--button">Concluir</button>
+                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+            </div>
+        </section>
+        <section class="cardTask hide">
+            <div class="cardTask__img">
+                <img src="./imgs/cardIcon.png" alt="Card Task Icon">
+            </div>
+            <div class="cardTask__info">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <button class="cardTask__info--button">Concluir</button>
+                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+            </div>
+        </section>
+        <section class="cardTask hide">
+            <div class="cardTask__img">
+                <img src="./imgs/cardIcon.png" alt="Card Task Icon">
+            </div>
+            <div class="cardTask__info">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <button class="cardTask__info--button">Concluir</button>
+                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+            </div>
+        </section>
+        <section class="cardTask endingDeadline hide">
+            <div class="cardTask__img">
+                <img src="./imgs/cardIcon.png" alt="Card Task Icon">
+            </div>
+            <div class="cardTask__info">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <button class="cardTask__info--button">Concluir</button>
+                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+            </div>
+        </section>
+        <section class="cardTask hide">
+            <div class="cardTask__img">
+                <img src="./imgs/cardIcon.png" alt="Card Task Icon">
+            </div>
+            <div class="cardTask__info">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <button class="cardTask__info--button">Concluir</button>
+                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <button class="cardTask__desktop--done">Concluir</button>
+                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
             </div>
         </section>
         <button class="main__button">Ver Mais +</button>
@@ -61,5 +161,6 @@
         </section>
     </footer>
     <script src="https://kit.fontawesome.com/0adc430495.js" crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
