feat: email newslatter

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="https://share.linx.com.br/download/thumbnails/168367435/LINX3D_laranja_RGB.PNG?version=1&modificationDate=1590610043314&api=v2" type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.css">
 
     <title>Linx - Task Dashboard</title>
@@ -144,8 +145,21 @@
             </div>
         </section>
         <button class="main__button">Ver Mais +</button>
+        
     </main>
     <footer class="footer">
+        <form class="footer__form hide">
+            <p>Quer receber dicas para organizar melhor a sua rotina? Cadastre-se!</p>
+            <section class="footer__form--name">
+                <label for="name-input" >Nome</label>
+                <input type="text" id="name-input" name="name-input" placeholder="Digite seu nome">
+            </section>
+            <section class="footer__form--email">
+                <label for="email-input">Email</label>
+                <input type="email" name="email-input" id="email-input" placeholder="Digite seu email">
+            </section>
+            <button class="footer__form--button">Cadastrar</button>
+        </form>
         <section class="footer__description">
             <img src="./imgs/linxLogo.png" alt="Linx Logo" class="footer__description--image">
             <p class="footer__description--text">A Linx é uma empresa brasileira especialista em tecnologia para o varejo. Líder no mercado de software de    gestão, com 45,6% de market share do mercado varejista, conforme atesta o IDC.<br><br>
