--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <img src="./imgs/redClock.svg" alt="Clock" class="cardTask__info--mobile">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
                 <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
                 <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change">Alterar prazo</button>
             </div>
         </section>
         <section class="cardTask">
@@ -51,13 +52,14 @@
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
-                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
+                <img src="./imgs/redClock.svg" alt="Clock" class="cardTask__info--mobile">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito.</p>
                 <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change">Alterar prazo</button>
             </div>
         </section>
         <section class="cardTask">
@@ -65,13 +67,14 @@
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <img src="./imgs/redClock.svg" alt="Clock" class="cardTask__info--mobile">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
                 <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
                 <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change">Alterar prazo</button>
             </div>
         </section>
         <section class="cardTask">
@@ -79,13 +82,13 @@
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <img src="./imgs/redClock.svg" alt="Clock" class="cardTask__info--mobile">
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
                 <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
-                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change">Alterar prazo</button>
             </div>
         </section>
         <section class="cardTask hide">
@@ -93,27 +96,28 @@
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
                 <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
                 <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change"><img src="./imgs/whiteClock.svg" alt="white clock"></i> <p>Alterar prazo</p></button>
             </div>
+            
         </section>
         <section class="cardTask hide">
             <div class="cardTask__img">
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
                 <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
                 <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change">Alterar prazo</button>
             </div>
         </section>
         <section class="cardTask endingDeadline hide">
@@ -121,13 +125,13 @@
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
-                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
-                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
+                <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito.</p>
+                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span><span>Atraso: 3 dias</span></p>
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change"> Alterar prazo</button>
             </div>
         </section>
         <section class="cardTask hide">
@@ -135,13 +139,13 @@
                 <img src="./imgs/cardIcon.png" alt="Card Task Icon">
             </div>
             <div class="cardTask__info">
-                <h2 class="cardTask__info--title">Nome da tarefa</h2><i class="fas fa-clock"></i>
+                <h2 class="cardTask__info--title">Nome da tarefa</h2>
                 <p class="cardTask__info--desc">Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.</p>
-                <p class="cardTask__info--deadline"> Prazo: <span>00/00</span></p>
+                
                 <button class="cardTask__info--button">Concluir</button>
-                <span class="cardTask__info-data">Data de inclusão: há <span>2</span> semanas</span>
+                <span class="cardTask__info--data">Data de inclusão: há <span>2</span> semanas</span>
                 <button class="cardTask__desktop--done">Concluir</button>
-                <button class="cardTask__desktop--change"><i class="far fa-clock"></i> Alterar prazo</button>
+                <button class="cardTask__desktop--change">Alterar prazo</button>
             </div>
         </section>
         <button class="main__button">Ver Mais +</button>
@@ -174,7 +178,6 @@
                 Teste ficcional!</p>
         </section>
     </footer>
-    <script src="https://kit.fontawesome.com/0adc430495.js" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
 </body>
 </html>
